# ssh-manager

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: tauri-dev.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  secrets.rs  store.rs  terminal.rs
src/components/: CommandPalette.tsx  FavoritesBar.tsx  ProfileForm.tsx  ProfileTree.tsx  SettingsDialog.tsx  TerminalView.tsx
src/components/ui/: button.tsx  command.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx
src/lib/: disableDevtools.ts  tauri.ts  theme.ts  types.ts
src/store/: useStore.ts
src/styles/: globals.css
