[package]
name = "ssh-manager"
version = "0.1.1"
description = "SSH profile manager"
authors = ["hbseo"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ssh_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native"] }
anyhow = "1"
which = "6"
thiserror = "1"
portable-pty = "0.9"
base64 = "0.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
